--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+
 /* prevent default styling for input fields in browsers */
 @layer base {
     input:-webkit-autofill,
@@ -8,5 +9,28 @@
         -webkit-box-shadow: 0 0 0 30px white inset !important;
         -webkit-text-fill-color: #4a5565 !important;
     }
+}
+/* Define font-face */
+@font-face {
+  font-family: 'Inter';
+  src: url('./assets/fonts/Inter-Regular.woff2') format('woff2'),
+       url('./assets/fonts/Inter-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Inter';
+  src: url('./assets/fonts/Inter-Bold.woff2') format('woff2'),
+       url('./assets/fonts/Inter-Bold.woff') format('woff');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+
+body {
+  font-family: 'Inter', sans-serif;
 }
 
