--- a/src/index.css
+++ b/src/index.css
@@ -12,18 +12,16 @@
 }
 /* Define font-face */
 @font-face {
-  font-family: 'Inter';
-  src: url('./assets/fonts/Inter-Regular.woff2') format('woff2'),
-       url('./assets/fonts/Inter-Regular.woff') format('woff');
+  font-family: 'Quicksand';
+  src: url('./assets/fonts/quicksand/Quicksand_Light.otf');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Inter';
-  src: url('./assets/fonts/Inter-Bold.woff2') format('woff2'),
-       url('./assets/fonts/Inter-Bold.woff') format('woff');
+  font-family: 'Quicksand';
+  src: url('./assets/fonts/quicksand/Quicksand_Bold.otf');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -31,6 +29,6 @@
 
 
 body {
-  font-family: 'Inter', sans-serif;
+  font-family: 'Quicksand', sans-serif;
 }
 
